# sort-cpp

./: CMakeLists.txt  MOT2015  build.sh  run.sh
output/: ADL-Rundle-6.txt  ADL-Rundle-8.txt  ETH-Bahnhof.txt  ETH-Pedcross2.txt  ETH-Sunnyday.txt  KITTI-13.txt  KITTI-17.txt  PETS09-S2L1.txt  TUD-Campus.txt  TUD-Stadtmitte.txt  Venice-2.txt
python/: benchmark.py  requirements.txt  sort.py
src/: CMakeLists.txt  Hungarian.cpp  Hungarian.h  KalmanTracker.cpp  main.cpp  validate.cpp
